deve ser isso então, porque veja a imagem

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,32 @@
 {
+  "theme_color": "#f4efe7",
+  "background_color": "#f4efe7",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
   "name": "DreamVault",
   "short_name": "DreamVault",
-  "description": "Sonhar juntos é o primeiro passo para conquistar.",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#F5F5DC",
-  "theme_color": "#D4AF37",
+  "description": "Sonhar juntos \u00e9 o primeiro passo para conquistar.",
   "icons": [
     {
-      "src": "/favicon.ico",
-      "sizes": "48x48",
-      "type": "image/x-icon"
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
