--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 !.yarn/releases
 !.yarn/versions
 
+landing-page
+
 # testing
 /coverage
 
@@ -43,3 +45,4 @@ next-env.d.ts
 # firebase
 firebase-debug.log
 firestore-debug.log
+/src/generated/prisma
