--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,8 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
+.pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
@@ -29,19 +24,20 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+
+# local env files
+.env*.local
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
 
-.genkit/*
-.env*
-
-# firebase
+# Firebase
+/hosting-public
 firebase-debug.log
-firestore-debug.log
-/src/generated/prisma
+/genkit-state.json
+
+# Local Environment
+.env
