--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
+    "dev": "npm run prisma:generate:dev && next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "NODE_ENV=production next build",
+    "build": "npm run prisma:generate:prod && NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio",
-    "prisma:seed": "tsx prisma/seed.ts",
-    "prisma:reset": "prisma migrate reset",
-    "db:push": "prisma db push",
-    "db:seed": "tsx prisma/seed.ts"
+    "prisma:generate:dev": "prisma generate --schema=./prisma/sqlite.prisma",
+    "prisma:generate:prod": "prisma generate --schema=./prisma/postgres.prisma",
+    "prisma:migrate:dev": "prisma migrate dev --schema=./prisma/sqlite.prisma",
+    "prisma:migrate:prod": "prisma migrate deploy --schema=./prisma/postgres.prisma",
+    "prisma:studio": "prisma studio --schema=./prisma/sqlite.prisma",
+    "db:seed": "tsx prisma/seed.ts",
+    "prisma:reset": "prisma migrate reset --schema=./prisma/sqlite.prisma",
+    "db:push": "prisma db push --schema=./prisma/sqlite.prisma"
   },
   "dependencies": {
     "@genkit-ai/google-genai": "^1.20.0",
@@ -76,8 +78,5 @@
     "tailwindcss": "^3.4.1",
     "tsx": "^4.20.6",
     "typescript": "^5"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
   }
 }
