--- a/package.json
+++ b/package.json
@@ -3,22 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run prisma:generate:dev && next dev --turbopack -p 9002",
+    "dev": "npm run prisma:generate && next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "npm run prisma:generate:prod && NODE_ENV=production next build",
+    "build": "npm run prisma:generate && NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "prisma:generate": "prisma generate",
-    "prisma:generate:dev": "prisma generate --schema=./prisma/sqlite.prisma",
-    "prisma:generate:prod": "prisma generate --schema=./prisma/postgres.prisma",
-    "prisma:migrate:dev": "prisma migrate dev --schema=./prisma/sqlite.prisma",
-    "prisma:migrate:prod": "prisma migrate deploy --schema=./prisma/postgres.prisma",
-    "prisma:studio": "prisma studio --schema=./prisma/sqlite.prisma",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
-    "prisma:reset": "prisma migrate reset --schema=./prisma/sqlite.prisma",
-    "db:push": "prisma db push --schema=./prisma/sqlite.prisma"
+    "prisma:reset": "prisma migrate reset",
+    "db:push": "prisma db push"
   },
   "dependencies": {
     "@genkit-ai/google-genai": "^1.20.0",
