Refactor data handling to remove mock data and integrate real database services
- Removed all mock data files related to users, accounts, goals, transactions, notifications, and vaults.
- Updated `data.ts` to utilize real data fetching methods instead of mock data.
- Introduced empty exports in `data.ts` to prevent breaking changes while transitioning to real data.
- Modified transaction service to ensure proper association with users and vaults.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "prisma:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
     "prisma:reset": "prisma migrate reset",
-    "db:push": "prisma db push"
+    "db:push": "prisma db push",
+    "db:switch:postgres": "node scripts/switch-db.js postgres",
+    "db:switch:sqlite": "node scripts/switch-db.js sqlite"
   },
   "dependencies": {
     "@genkit-ai/google-genai": "^1.20.0",
