npm run db:reset:force
> nextn@0.1.0 db:reset:force
> prisma migrate re

--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run prisma:migrate && next dev --turbopack -p 9002",
+    "dev": "npm run prisma:generate && next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "npm run prisma:generate && NODE_ENV=production next build",
@@ -11,13 +11,14 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate": "prisma migrate dev --name sync-schema",
     "prisma:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
     "db:clear": "node scripts/clear-database.js",
     "db:clear:safe": "node scripts/clear-database-interactive.js",
     "db:reset": "npm run db:clear && npm run db:seed",
     "prisma:reset": "prisma migrate reset",
+    "db:reset:force": "prisma migrate reset --force && npm run db:seed",
     "db:push": "prisma db push",
     "db:switch:postgres": "node scripts/switch-db.js postgres",
     "db:switch:sqlite": "node scripts/switch-db.js sqlite"
