--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "OPENSSL_BIN=$(which openssl) npm run prisma:generate && next dev --turbopack -p 9002",
+    "dev": "npm run prisma:generate && next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "OPENSSL_BIN=$(which openssl) npm run prisma:generate && NODE_ENV=production next build",
