refactor: simplificar comando de build e corrigir chamada de cookies

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "npm run prisma:generate && next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "OPENSSL_BIN=$(which openssl) npm run prisma:generate && NODE_ENV=production next build",
+    "build": "npm run prisma:generate && next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
