--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "db:switch:sqlite": "node scripts/switch-db.js sqlite"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.940.0",
     "@genkit-ai/google-genai": "^1.20.0",
     "@genkit-ai/next": "^1.20.0",
     "@hookform/resolvers": "^4.1.3",
