Atualiza o arquivo package.json para incluir a configuração de seed do Prisma e ajusta o package-lock.json para refletir as alterações nas dependências.

--- a/package.json
+++ b/package.json
@@ -77,6 +77,9 @@
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "devDependencies": {
     "@faker-js/faker": "^10.1.0",
     "@types/node": "^20",
