feat: adiciona ícone de 180x180 e configurações de PWA no layout

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,11 +7,21 @@
   "name": "Caixinhas",
   "short_name": "Caixinhas",
   "description": "Sonhar juntos \u00e9 o primeiro passo para conquistar.",
+  "orientation": "portrait-primary",
+  "lang": "pt-BR",
+  "categories": ["finance", "productivity"],
   "icons": [
+    {
+      "src": "/icons/icon-180x180.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
     {
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icons/icon-256x256.png",
@@ -26,7 +36,8 @@
     {
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
