test: adiciona testes de regressão para bugs corrigidos em /recurring
Cria suite completa de testes para prevenir bugs:

✅ Testes E2E (19 novos)
- Adiciona tests/recurring.spec.ts com 19 testes E2E
- Valida exibição de TODAS as transações parceladas
- Testa que não há agrupamento incorreto por descrição
- Verifica checkboxes de parcelas pagas
- Valida progresso de pagamento
- Testa navegação e formatação de valores

✅ Testes de Integração (Jest)
- Adiciona __tests__/integration/recurring-actions.test.ts
- Testa filtros de transações (recurring, installment)
- Valida que NÃO agrupa por descrição (bug fix)
- Testa cálculo de parcelas pagas
- Valida campos obrigatórios

✅ Configuração
- Adiciona jest.config.ts e jest.setup.ts
- Atualiza package.json com scripts de teste:
  - test:e2e, test:e2e:ui, test:e2e:recurring
  - test:integration, test:all
- Move testes de integração para __tests__/
- Atualiza playwright.config (apenas chromium)

✅ Documentação
- Cria docs/TESTING.md com guia completo
- Documenta bugs corrigidos e testes criados
- Inclui exemplos de como adicionar novos testes
- Checklist para garantir qualidade

Bugs Prevenidos:
1. Agrupamento de transações por descrição (só mostrava 1)
2. Filtro limitado de installmentNumber
3. Loading de navegação muito rápido

Total: 94 testes E2E passando (11.8 minutos)
- 75 testes anteriores
- 19 novos testes de /recurring

--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:integration": "jest --testPathPattern=__tests__/integration",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:recurring": "playwright test tests/recurring.spec.ts",
+    "test:all": "npm run test && npm run test:e2e",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name sync-schema",
     "prisma:studio": "prisma studio",
