feat: adiciona a dependência 'critters' na configuração do projeto

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "critters": "^0.0.23",
     "genkit-cli": "^1.24.0",
     "postcss": "^8.5.6",
     "prisma": "^5.17.0",
