feat: add service worker generation script with automatic versioning
feat: integrate session validation component to handle user session state

fix: improve login page behavior to clear loading state on successful login

refactor: enhance reports page layout and loading states for better UX

feat: implement session validator to log out users if their account is deleted

style: update report display component for improved visual hierarchy

style: refine report generator form layout and user interaction

feat: add loading screen during mobile navigation for better user feedback

fix: adjust mobile navigation wrapper padding for consistent layout

feat: enhance update notification with current version display and improved UI

fix: handle navigation state in vaults page to close loading after login

fix: update authentication logic to throw error for deleted users

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 
+# Service Worker (gerado automaticamente)
+/public/sw.js
+
 # Firebase
 /hosting-public
 firebase-debug.log
