feat: add database migration and studio commands for different environments
fix: update service worker version and build timestamp

feat: create script for generating feature branches in Git

feat: include pending invitations in goal management page

feat: implement invitation cancellation for goal-related invites

feat: enhance email invitation template to include goal context

refactor: update invite management page to reflect new features

feat: add context to vault invitation creation for better email handling

style: improve goal card hover effects and add user guidance

fix: adjust access banner styling for better visibility

fix: allow navigation from workspace card regardless of active state

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,11 @@ firebase-debug.log
 nul
 test-results/
 playwright-report/
+
+
+# Adicione ao .gitignore
+.env.development
+.env.staging
+.env.production
+.env.local
+.env*.local
