--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "node scripts/generate-sw.js && npm run prisma:generate && next build",
     "start": "next start",
     "lint": "next lint",
+    "process-logos": "node scripts/process-bank-logos.js",
     "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -111,6 +112,7 @@
     "genkit-cli": "^1.24.0",
     "postcss": "^8.5.6",
     "prisma": "^5.17.0",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.18",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
